k8s/infrastructure/monitoring/headlamp/base/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-headlamp
  namespace: headlamp
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: headlamp}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '4466', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '4466', protocol: TCP}]]}  # Envoy Gateway
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}}], toPorts: [ports: [{port: '10443', protocol: TCP}]]}  # Needed for OIDC / Authelia
    - {toEntities: [kube-apiserver]}
